# phun

./: .gitignore  CHANGELOG.md  NOTES.md  README.md  phun.cabal  placeholder-name.cabal
app/: Lexer.hs  Main.hs  Parser.hs  TC.hs
examples/: a.ph  bool.ph  boolProduct.ph  eq.ph  nat.ph  productAndCoproduct.ph  reflect.ph  skolem.ph  the.ph
test/: a.ph
