cabal-version:      3.4
name:               placeholder-name
version:            0.1.0.0
-- synopsis:
-- description:
license:            LGPL-3.0-or-later
license-file:       LICENSE
author:             Jakob Brünker
maintainer:         jakob.bruenker@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable placeholder-name
    import:           warnings
    main-is:          Main.hs
    default-extensions: OverloadedStrings,
                        StrictData,
                        NoFieldSelectors,
                        DuplicateRecordFields,
                        OverloadedRecordDot,
                        BlockArguments,
                        MonadComprehensions,
                        TypeAbstractions,
                        ViewPatterns,
                        DerivingVia,
    other-modules: Lexer, Parser, TC
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0,
                      text,
                      mtl,
                      containers,
                      transformers,
                      comonad,
                      megaparsec,
    hs-source-dirs:   app
    default-language: GHC2024
